<resources>
  <string name="app_name">Wildlife Diary</string>
  <string name="dismiss">Dismiss</string>
  <string name="desc_add_encounter">Add new encounter</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_logout">Log off</string>
  <string name="title_settings">Settings</string>
  <string name="logout_message">Are you sure you want to log out?</string>
  <string name="placeholder"> </string>
  <string name="label_species">Wildlife Species:</string>
  <string name="label_date">Date:</string>
  <string name="hint_abbreviation">Abbreviation of species</string>
  <string name="hint_date">MM/DD/YYYY</string>
  <string name="label_add_encounter">Add</string>
  <string name="label_update_encounter">Update</string>
  <string name="pref_key_enable_sensitive">enable_sensitive</string>
  <string name="pref_statistics_enable_sensitive">Show all tasks</string>
  <string name="pref_title_enable_sensitive">Show Sensitive Tasks</string>
  <string name="pref_category_about">About</string>
  <string name="pref_key_app_version">key_app_version</string>
  <string name="pref_title_app_version">Application Version</string>
  <string name="pref_key_user_id">user_id</string>
  <string name="pref_key_stamp_tasks">stamp_tasks</string>
  <string name="pref_key_following_user_id">following_user_id</string>
  <string name="pref_key_stamp_encounters">stamp_encounters</string>
  <string name="pref_key_stamp_wildlife">stamp_wildlife</string>
  <string name="pref_key_is_contributor">is_contributor</string>
  <string name="header_total_encounters">Total Encounters</string>
  <string name="header_unique_encounters">Unique Encounters</string>
  <string name="header_handled_exam">Handled (Exam)</string>
  <string name="header_handled_force_fed">Handled (Force Fed)</string>
  <string name="header_handled_gavage">Handled (Gavage)</string>
  <string name="header_handled_medication">Handled (Medication)</string>
  <string name="header_handled_subcutaneous">Handled (Subcutaneous)</string>
  <string name="header_handled_euthanasia">Handled (Euthanasia)</string>
  <string name="header_oral_medication">Oral Medication</string>
  <string name="header_ocular_medication">Ocular Medication</string>
  <string name="header_gavage">Gavage</string>
  <string name="header_force_fed">Force Fed</string>
  <string name="header_subcutaneous">Subcutaneous</string>
  <string name="header_banded">Banded</string>
  <string name="header_most_encountered">Most Encountered</string>
  <string name="desc_task_completed">Shows whether or not task was completed during this encounter</string>
  <string name="menu_home">Home</string>
  <string name="tap_for_details">Tap for encounter details</string>
  <string name="header_syringe_fed">Syringe Fed</string>
  <string name="number_in_group">Number in group:</string>
  <string name="plus_sign">+</string>
  <string name="minus_sign">-</string>
  <string name="label_record_encounters">Record</string>
  <string name="label_delete">Delete</string>
  <string name="format_number_in_group">Number of %s in this encounter: %d</string>
  <string name="desc_sample_image_of_wildlife">Sample image of wildlife.</string>
  <string name="menu_cleanup">Clean up Tables</string>
  <string name="menu_sync">Sync</string>
  <string name="desc_remove_unused_entry">Remove unused entry.</string>
  <string name="desc_new_encounters">New encounters!</string>
  <string name="menu_recent">Recent</string>
  <string name="menu_date">By Date</string>
  <string name="menu_statistics">Statistics</string>
  <string name="format_number_of_encounters">Number of Encounter(s): %d</string>
  <string name="format_first_encountered">First Encountered: %s</string>
  <string name="title_statistics">Statistics</string>
  <string name="title_encounters_by_date">Encounters by Date</string>
  <string name="title_encounter_details">Encounter Details</string>
  <string name="title_unique_encounters">Unique Encounters</string>
  <string name="menu_crash">Force Crash</string>
  <string name="pref_key_override_contributor_setting">override_contributor</string>
  <string name="pref_override_contributor_setting">Override Contributor value</string>
  <string name="pref_title_override_contributor_setting">Override Contributor Setting</string>
  <string name="fragment_label_recent">Recent Encounters</string>
  <string name="fragment_label_encounter">Encounter</string>
  <string name="fragment_label_data">Data</string>
  <string name="fragment_label_cleanup">Clean up</string>
  <string name="fragment_label_statistics">Statistics</string>
  <string name="fragment_label_encounter_details_list">Encounter Details List</string>
  <string name="fragment_label_unique_encounters_list">Unique Encounters List</string>
  <string name="fragment_label_most_encountered">Most Encountered List</string>
  <string name="fragment_label_encounter_details">Encounter Details</string>
  <string name="fragment_label_date">By Date</string>
  <string name="fragment_label_settings">Settings</string>
</resources>
