<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <androidx.preference.PreferenceCategory>
    <androidx.preference.SwitchPreference
      android:defaultValue="false"
      android:key="@string/pref_key_enable_sensitive"
      android:persistent="true"
      android:summary="@string/pref_statistics_enable_sensitive"
      android:title="@string/pref_title_enable_sensitive"/>
  </androidx.preference.PreferenceCategory>

  <!-- TODO: add contributor switch -->
  <!-- TODO: add following list -->

  <androidx.preference.PreferenceCategory android:title="@string/pref_category_about">
    <androidx.preference.EditTextPreference
      android:key="@string/pref_key_app_version"
      android:maxLines="1"
      android:title="@string/pref_title_app_version"
      android:summary=""
      android:enabled="false"/>
  </androidx.preference.PreferenceCategory>

</PreferenceScreen>
