<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/menu_home"
    android:icon="@drawable/ic_home_dark"
    android:title="@string/menu_home"
    app:showAsAction="ifRoom" />

  <group android:id="@+id/menu_grouping">
    <item
      android:id="@+id/menu_settings"
      android:icon="@drawable/ic_setting_dark"
      android:title="@string/menu_settings"
      app:showAsAction="ifRoom" />
    <item
      android:id="@+id/menu_sync"
      android:icon="@drawable/ic_sync_dark"
      android:title="@string/menu_sync"
      app:showAsAction="ifRoom" />
    <item
      android:id="@+id/menu_cleanup"
      android:icon="@drawable/ic_cleanup_dark"
      android:title="@string/menu_cleanup"
      app:showAsAction="ifRoom" />
    <item
      android:id="@+id/menu_crash"
      android:icon="@drawable/ic_crash_dark"
      android:title="@string/menu_crash"
      app:showAsAction="ifRoom" />
  </group>

  <item android:id="@+id/menu_logout" android:title="@string/menu_logout"/>

</menu>
